--- a/index.html
+++ b/index.html
@@ -3,8 +3,146 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/norm.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="libery/font-awesome-4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h3>Hellow world</h3>
+    <div class="continer">
+        <selection class="economy-booking">
+            <div class="wrapper">
+                <div class="economy-booking-header">
+                    <h1>Rent car worldwide with <b>EconomyBookings</b></h1>
+                </div>
+                <div class="economy-booking-content-1">
+                    <h3>Why Book with EconomyBookings?</h3>
+                    <div class="eb-col-1">
+                        <ul class="fa-ul">
+                            <li><i class="fa-li fa fa-check fa-lg"></i>A wide selection of cars to choose from</li>
+                            <li><i class="fa-li fa fa-check fa-lg"></i>More than 150 countries and 20,000 locations </li>
+                            <li><i class="fa-li fa fa-check fa-lg"></i>More than 850 trustworthy suppliers worldwide</li>
+                        </ul>
+                    </div>
+                    <div class="eb-col-2">
+                        <ul class="fa-ul">
+                            <li><i class="fa-li fa fa-check fa-lg"></i>24/7 multi-lingual customer support</li>
+                            <li><i class="fa-li fa fa-check fa-lg"></i>No credit card or amendment fees</li>
+                            <li><img width="118"  src="img/norton.png" alt="Norton-Secured-Logo"></li>
+                        </ul>
+                    </div>
+                    <div class="eb-col-3">
+                        <h6>Joanna</h6>
+                        <p>
+                            I rented with Economybooking(car rental company SIXT)s in Alicante in September and found
+                            the service and quality of car to be absolutely fantastic. One of my best experiences with
+                            a large company ever!
+                        </p>
+                        <a href="">Read more</a>
+                        <img src="img/review-logo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </selection>
+        <footer>
+            <!----- Top footer starst------>
+            <div class="top-footer">
+                <div class="wrapper">
+                    <div class="top-footer-header">
+                        <h1>Book car rentals<br> from your phone</h1>
+                        <p>From any kind of Android smartphone, you can easily and<br> quickly book a vehicle with the
+                            EconomyBookings App. Just <br/>
+                            select your branch and vehicle and complete your booking!</p>
+                    </div>
+                    <div class="top-footer-btn">
+                        <a href="#">
+                            <img src="img/google-btn-white.png" alt="google button"/>
+                        </a>
+                        <a href="#">
+                            <img src="img/apple-btn-white.png" alt="#"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Middle footer List part-->
+            <div class="middle-footer">
+                <div class="wrapper clearfix">
+                    <!-- Footer list part stars-->
+                    <div class="footer-nav">
+                        <nav class="footer-nav">
+                            <ul class="footer-nav-list">
+                                <a href="#"><li>Company</li></a>
+                                <a href="#"><li>About Us</li></a>
+                                <a href="#"><li>News</li></a>
+                                <a href="#"><li>Cooperation</li></a>
+                                <a href="#"><li>Contacts</li></a>
+                            </ul>
+                            <ul class="footer-nav-list">
+                                <a href="#"><li>Useful</li></a>
+                                <a href="#"><li>Destination guide</li></a>
+                                <a href="#"><li>Where Rent a Car</li></a>
+                                <a href="#"><li>Best Deals</li></a>
+                                <a href="#"><li>Terms of use</li></a>
+                                <a href="#"><li>Mobile Apps</li></a>
+                            </ul>
+                            <ul class="footer-nav-list">
+                                <a href="#"><li>Help</li></a>
+                                <a href="#"><li>Privacy Policy</li></a>
+                                <a href="#"><li>Terms</li></a>
+                                <a href="#"><li>FAQ</li></a>
+                            </ul>
+                            <ul class="footer-nav-list">
+                                <a href="#"><li>Partner Programs</li></a>
+                                <a href="#"><li>Affilate Programs For Publishers</li></a>
+                                <a href="#"><li>For Car Rental Suppliers and Brokers</li></a>
+                                <a href="#"><li>For Travel Agencies and Aggregators</li></a>
+                                <a href="#"><li>Customer's Referal Program</li></a>
+                            </ul>
+                        </nav>
+                        <div class="footer-soc-list">
+                            <ul class="footer-soc-list">
+                                <a href=""><li><i class="fa fa-facebook fa-2x"></i></li></a>
+                                <a href=""><li><i class="fa fa-youtube fa-2x"></i></li></a>
+                                <a href=""><li><i class="fa fa-google-plus fa-2x"></i></li></a>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="email-container">
+                        <h5>Subscribe to our best deals</h5>
+                        <p>Car hire at best price.<br>Subscribe to our Exclusive Offers.</p>
+                        <form>
+                            <input type="email" name="email-submit" placeholder="Your email"><br>
+                            <input class="btn-yell" type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Bottom footer booking part-->
+            <div class="bottom-footer">
+                <div class="wrapper">
+                    <!-- First part starts-->
+                    <div class="info-col-1">
+                        <a href="#">
+                            <img src="img/booking-logo.png" alt=""/>
+                        </a>
+                        <span>© SIA Booking Group, 2008—2014</span>
+                    </div>
+                    <div class="info-col-2">
+                        <a href="#">
+                            <img src="img/apple.png" alt="apple store"/>
+                        </a>
+                        <a href="#">
+                            <img style="margin-bottom: 2px;" src="img/android.png" alt="Google play"/>
+                        </a>
+                        <div class="info-col-3">
+                            <a href="#">
+                                <img src="img/norton.png" alt="Antivirus norton"/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
